# bizagi_rest

./: pyproject.toml  requirements.txt  start_server.sh
application/: main.py
migrations/: env.py
migrations/versions/: 2d87f34b9ea2_first_revision.py  9c34f4235482_changed_compra_date_datetime_to_date.py  d54676dc0861_date_field_in_compra_model_changed_to_.py
repository/: compra.py  fornecedor.py  session.py  utils.py
repository/models/: __init__.py  compra.py  fornecedor.py
schemas/: compra.py  fornecedor.py
settings/: __init__.py  settings.py
tests/: conftest.py
tests/test_repo/: test_compra.py  test_fornecedor.py  test_utils.py
tests/test_settings/: test_settings.py
