[tool.poetry]
name = "bizagi-rest"
version = "0.1.0"
description = "Just a simple API to try Bizagi integration with REST"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bizagi_rest"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.45"
pydantic = "^1.10.2"
alembic = "^1.9.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pynvim = "^0.4.3"
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
